// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI pretty logger force-color 1`] = `
Array [
  Array [
    "2009-02-13T23:31:30.000Z ERROR   hallo { err:
   { message: 'hallo',
     name: 'Error',
     stack:
      'Error: hallo\\\\n    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/cli.test.js:25:22)' } }
",
  ],
]
`;

exports[`CLI pretty logger no-color 1`] = `
Array [
  Array [
    "2009-02-13T23:31:30.000Z ERROR   hallo { err:
   { message: 'hallo',
     name: 'Error',
     stack:
      'Error: hallo\\\\n    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/cli.test.js:13:22)' } }
",
  ],
]
`;
